--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,15 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'base (Python 3.9.19)' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
      ]
     }
    ],
@@ -51,16 +52,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "ccc0ee22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m         phn \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdatos_json[key][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mphn\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     17\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m wavdir, duration, phn\n\u001b[0;32m---> 19\u001b[0m train_dataset \u001b[38;5;241m=\u001b[39m \u001b[43mTimitDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_json\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     20\u001b[0m test_dataset \u001b[38;5;241m=\u001b[39m TimitDataset(test_json)\n\u001b[1;32m     21\u001b[0m valid_dataset \u001b[38;5;241m=\u001b[39m TimitDataset(valid_json)\n",
+      "Cell \u001b[0;32mIn[2], line 8\u001b[0m, in \u001b[0;36mTimitDataset.__init__\u001b[0;34m(self, json_file)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, json_file):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(json_file, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m----> 8\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdatos_json \u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241m.\u001b[39mload(f)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'json' is not defined"
+     ]
+    }
+   ],
    "source": [
     "train_json = 'data/train.json'\n",
     "test_json = 'data/test.json'\n",
     "valid_json = 'data/dev.json'\n",
     "\n",
-    "class TimitDataset(data.Dataset):\n",
+    "class TimitDataset():\n",
     "    def __init__(self, json_file):\n",
     "        with open(json_file, 'r') as f:\n",
     "            self.datos_json = json.load(f)\n",
@@ -117,9 +131,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python (speechbrain)",
    "language": "python",
-   "name": "python3"
+   "name": "speechbrain"
   },
   "language_info": {
    "codemirror_mode": {
@@ -131,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
