solucion del path a los kernels de jupyter

--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -10,16 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6bd4c865",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start as the Python Environment 'base (Python 3.9.19)' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cuda\n"
      ]
     }
    ],
@@ -131,9 +130,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (speechbrain)",
+   "display_name": "base",
    "language": "python",
-   "name": "speechbrain"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -145,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
