--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6ae35e4b",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "26a4fcf5",
    "metadata": {},
    "outputs": [
@@ -50,35 +50,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0, 6, 0, 3, 6]) tensor(1)\n",
-      "tensor([6, 2, 1, 3, 5, 1, 4, 2, 6, 6]) tensor(0)\n",
-      "tensor([8, 9, 6, 0, 2, 2, 9, 6]) tensor(1)\n",
-      "tensor([8, 5, 5, 5, 7, 5]) tensor(0)\n",
-      "tensor([6, 8, 9, 2, 7, 2, 1, 5, 7, 7, 5, 1]) tensor(1)\n",
+      "tensor([2, 0, 9, 8, 8]) tensor(1)\n",
+      "tensor([5, 1, 3, 3, 8, 2, 3, 1, 0, 0]) tensor(1)\n",
+      "tensor([6, 0, 5, 8, 8, 6, 2, 8]) tensor(1)\n",
+      "tensor([5, 6, 1, 3, 8, 6]) tensor(1)\n",
+      "tensor([7, 8, 3, 3, 4, 9, 6, 7, 2, 8, 7, 1]) tensor(0)\n",
       "\n",
       "Batch 1:\n",
       "Padded Sequences:\n",
-      "tensor([[6, 2, 1, 3, 5, 1, 4, 2, 6, 6],\n",
-      "        [8, 5, 5, 5, 7, 5, 0, 0, 0, 0]])\n",
+      "tensor([[2, 0, 9, 8, 8, 0, 0, 0, 0, 0],\n",
+      "        [5, 1, 3, 3, 8, 2, 3, 1, 0, 0]])\n",
       "Labels:\n",
-      "tensor([0, 0])\n",
+      "tensor([1, 1])\n",
       "Shape of padded sequences:\n",
       "torch.Size([2, 10])\n",
       "Batch 2:\n",
       "Padded Sequences:\n",
-      "tensor([[8, 9, 6, 0, 2, 2, 9, 6, 0, 0, 0, 0],\n",
-      "        [6, 8, 9, 2, 7, 2, 1, 5, 7, 7, 5, 1]])\n",
+      "tensor([[6, 0, 5, 8, 8, 6, 2, 8],\n",
+      "        [5, 6, 1, 3, 8, 6, 0, 0]])\n",
       "Labels:\n",
       "tensor([1, 1])\n",
       "Shape of padded sequences:\n",
-      "torch.Size([2, 12])\n",
+      "torch.Size([2, 8])\n",
       "Batch 3:\n",
       "Padded Sequences:\n",
-      "tensor([[0, 6, 0, 3, 6]])\n",
+      "tensor([[7, 8, 3, 3, 4, 9, 6, 7, 2, 8, 7, 1]])\n",
       "Labels:\n",
-      "tensor([1])\n",
+      "tensor([0])\n",
       "Shape of padded sequences:\n",
-      "torch.Size([1, 5])\n"
+      "torch.Size([1, 12])\n"
      ]
     }
    ],
@@ -137,11 +137,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([2, 0, 6, 2, 5]) tensor(0)\n",
-      "tensor([2, 8, 6, 6, 3, 1, 2, 1, 1, 6]) tensor(0)\n",
-      "tensor([9, 8, 5, 2, 7, 0, 2, 3]) tensor(1)\n",
-      "tensor([8, 5, 6, 6, 6, 9]) tensor(1)\n",
-      "tensor([8, 7, 3, 4, 7, 3, 7, 9, 5, 7, 2, 2]) tensor(0)\n"
+      "tensor([2, 0, 9, 8, 8]) tensor(1)\n",
+      "tensor([5, 1, 3, 3, 8, 2, 3, 1, 0, 0]) tensor(1)\n",
+      "tensor([6, 0, 5, 8, 8, 6, 2, 8]) tensor(1)\n",
+      "tensor([5, 6, 1, 3, 8, 6]) tensor(1)\n",
+      "tensor([7, 8, 3, 3, 4, 9, 6, 7, 2, 8, 7, 1]) tensor(0)\n"
      ]
     }
    ],
@@ -506,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
