--- a/mnist/mnist_sample.ipynb
+++ b/mnist/mnist_sample.ipynb
@@ -20,43 +20,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from torch import nn,optim,tensor\n",
+    "from torch.utils.data import TensorDataset, DataLoader\n",
     "import pickle, gzip\n",
-    "from pathlib import Path\n",
-    "from mnist_sample import *"
+    "\n",
+    "\n",
+    "def loss_batch(model, loss_func, xb, yb, opt=None):\n",
+    "    loss = loss_func(model(xb), yb)\n",
+    "\n",
+    "    if opt is not None:\n",
+    "        loss.backward()\n",
+    "        opt.step()\n",
+    "        opt.zero_grad()\n",
+    "\n",
+    "    return loss.item(), len(xb)\n",
+    "\n",
+    "\n",
+    "def fit(epochs, model, loss_func, opt, train_dl, valid_dl):\n",
+    "    for epoch in range(epochs):\n",
+    "        model.train()\n",
+    "        for xb,yb in train_dl: loss_batch(model, loss_func, xb, yb, opt)\n",
+    "\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            losses,nums = zip(*[loss_batch(model, loss_func, xb, yb)\n",
+    "                                for xb,yb in valid_dl])\n",
+    "        val_loss = np.sum(np.multiply(losses,nums)) / np.sum(nums)\n",
+    "\n",
+    "        print(epoch, val_loss)\n",
+    "\n",
+    "\n",
+    "class Lambda(nn.Module):\n",
+    "    def __init__(self, func):\n",
+    "        super().__init__()\n",
+    "        self.func=func\n",
+    "\n",
+    "    def forward(self, x): return self.func(x)\n",
+    "\n",
+    "\n",
+    "class WrappedDataLoader():\n",
+    "    def __init__(self, dl, func):\n",
+    "        self.dl = dl\n",
+    "        self.func = func\n",
+    "\n",
+    "    def __len__(self): return len(self.dl)\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        batches = iter(self.dl)\n",
+    "        for b in batches: yield(self.func(*b))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH = Path('data')/'mnist'\n",
     "\n",
-    "with gzip.open(PATH/'mnist.pkl.gz', 'rb') as f:\n",
+    "\n",
+    "with gzip.open('data/mnist.pkl.gz', 'rb') as f:\n",
     "    ((train_x, train_y), (valid_x, valid_y), _) = pickle.load(f, encoding='latin-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "bs=64\n",
     "lr=0.1\n",
-    "epochs=2\n",
+    "epochs=20\n",
     "\n",
     "dev = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,26 +146,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.35200357556343076\n",
+      "1 0.23578783464431763\n",
+      "2 0.20812358429431915\n",
+      "3 0.18592815330028534\n",
+      "4 0.17274532527923583\n",
+      "5 0.16054231069684027\n",
+      "6 0.15549320149421691\n",
+      "7 0.1520364279359579\n",
+      "8 0.14865893067568542\n",
+      "9 0.14952965597659348\n",
+      "10 0.146713733959198\n",
+      "11 0.1522614889740944\n",
+      "12 0.14569349290132522\n",
+      "13 0.13937673519700766\n",
+      "14 0.1439363737821579\n",
+      "15 0.13884912676736713\n",
+      "16 0.13784348073005676\n",
+      "17 0.13778409123420715\n",
+      "18 0.13393967863321304\n",
+      "19 0.13233190182447432\n"
+     ]
+    }
+   ],
    "source": [
     "fit(epochs, model, F.cross_entropy, opt, train_dl, valid_dl)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
