agregado de notebook

--- a/mnist/mnist_sample.ipynb
+++ b/mnist/mnist_sample.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,8 @@
     "\n",
     "\n",
     "def loss_batch(model, loss_func, xb, yb, opt=None):\n",
-    "    loss = loss_func(model(xb), yb)\n",
+    "    pb = model(xb)\n",
+    "    loss = loss_func(pb, yb)\n",
     "\n",
     "    if opt is not None:\n",
     "        loss.backward()\n",
@@ -46,10 +47,15 @@
     "def fit(epochs, model, loss_func, opt, train_dl, valid_dl):\n",
     "    for epoch in range(epochs):\n",
     "        model.train()\n",
-    "        for xb,yb in train_dl: loss_batch(model, loss_func, xb, yb, opt)\n",
-    "\n",
+    "        for xb,yb in train_dl: \n",
+    "            pb = model(xb)\n",
+    "            loss = loss_func(pb,yb)\n",
+    "            loss.backward\n",
+    "            opt.step()\n",
+    "            opt.zero_grad()\n",
     "        model.eval()\n",
     "        with torch.no_grad():\n",
+    "            \n",
     "            losses,nums = zip(*[loss_batch(model, loss_func, xb, yb)\n",
     "                                for xb,yb in valid_dl])\n",
     "        val_loss = np.sum(np.multiply(losses,nums)) / np.sum(nums)\n",
@@ -129,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +146,7 @@
     "    nn.AdaptiveAvgPool2d(1),\n",
     "    Lambda(lambda x: x.view(x.size(0),-1))\n",
     ").to(dev)\n",
-    "\n",
+    "loss_func = F.cross_entropy()\n",
     "opt = optim.SGD(model.parameters(), lr=lr, momentum=0.9)"
    ]
   },
@@ -197,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
