--- a/mnist/mnist_sample.ipynb
+++ b/mnist/mnist_sample.ipynb
@@ -19,6 +19,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Modulo `mnist_sample.py`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -76,6 +83,13 @@
     "        batches = iter(self.dl)\n",
     "        for b in batches: yield(self.func(*b))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prueba del módulo"
    ]
   },
   {
