--- a/mnist/mnist_sample.ipynb
+++ b/mnist/mnist_sample.ipynb
@@ -62,7 +62,9 @@
     "            opt.zero_grad()\n",
     "        model.eval()\n",
     "        with torch.no_grad():\n",
-    "            \n",
+    "            for xb,yb in valid_dl:\n",
+    "                pb = model(xb)\n",
+    "                loss = loss_func(pb,yb)\n",
     "            losses,nums = zip(*[loss_batch(model, loss_func, xb, yb)\n",
     "                                for xb,yb in valid_dl])\n",
     "        val_loss = np.sum(np.multiply(losses,nums)) / np.sum(nums)\n",
@@ -217,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
