--- a/mnist/mnist_sample.ipynb
+++ b/mnist/mnist_sample.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,45 +39,32 @@
     "import pickle, gzip\n",
     "\n",
     "\n",
-    "def loss_batch(model, loss_func, xb, yb, opt=None):\n",
-    "    pb = model(xb)\n",
-    "    loss = loss_func(pb, yb)\n",
     "\n",
-    "    if opt is not None:\n",
-    "        loss.backward()\n",
-    "        opt.step()\n",
-    "        opt.zero_grad()\n",
-    "\n",
-    "    return loss.item(), len(xb)\n",
-    "\n",
-    " \n",
     "def fit(epochs, model, loss_func, opt, train_dl, valid_dl):\n",
     "    for epoch in range(epochs):\n",
+    "        # Entrenamiento\n",
     "        model.train()\n",
     "        for xb,yb in train_dl: \n",
     "            pb = model(xb)\n",
-    "            loss = loss_func(pb,yb)\n",
-    "            loss.backward\n",
+    "            loss = loss_func(pb,yb)  \n",
+    "            loss.backward()\n",
     "            opt.step()\n",
     "            opt.zero_grad()\n",
+    "        # Validación\n",
     "        model.eval()\n",
+    "        losses = list()\n",
+    "        nums = list()\n",
     "        with torch.no_grad():\n",
     "            for xb,yb in valid_dl:\n",
     "                pb = model(xb)\n",
-    "                loss = loss_func(pb,yb)\n",
-    "            losses,nums = zip(*[loss_batch(model, loss_func, xb, yb)\n",
-    "                                for xb,yb in valid_dl])\n",
+    "                loss  = loss_func(pb,yb)\n",
+    "                num = len(xb)\n",
+    "                losses.append(loss.item())\n",
+    "                nums.append(num)\n",
     "        val_loss = np.sum(np.multiply(losses,nums)) / np.sum(nums)\n",
-    "\n",
     "        print(epoch, val_loss)\n",
     "\n",
     "\n",
-    "class Lambda(nn.Module):\n",
-    "    def __init__(self, func):\n",
-    "        super().__init__()\n",
-    "        self.func=func\n",
-    "\n",
-    "    def forward(self, x): return self.func(x)\n",
     "\n",
     "\n",
     "class WrappedDataLoader():\n",
@@ -102,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,20 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "bs=64\n",
     "lr=0.1\n",
-    "epochs=20\n",
+    "epochs=4\n",
     "\n",
     "dev = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,12 +123,15 @@
     "def get_dataloader(x,y,bs,shuffle):\n",
     "    ds = TensorDataset(*map(tensor, (x,y)))\n",
     "    dl = DataLoader(ds, batch_size=bs, shuffle=shuffle)\n",
-    "    return WrappedDataLoader(dl, preprocess)"
+    "    for xb, yb in dl:\n",
+    "        xp = xb.view(-1,1,28,28).to(dev)\n",
+    "        yp = yb.to(dev)\n",
+    "    return xp,yp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,55 +141,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "__main__.<lambda> is not a Module subclass",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mSequential(\n\u001b[1;32m      2\u001b[0m     nn\u001b[38;5;241m.\u001b[39mConv2d(\u001b[38;5;241m1\u001b[39m,  \u001b[38;5;241m16\u001b[39m, kernel_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m, stride\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), nn\u001b[38;5;241m.\u001b[39mReLU(),\n\u001b[1;32m      3\u001b[0m     nn\u001b[38;5;241m.\u001b[39mConv2d(\u001b[38;5;241m16\u001b[39m, \u001b[38;5;241m16\u001b[39m, kernel_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m, stride\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), nn\u001b[38;5;241m.\u001b[39mReLU(),\n\u001b[1;32m      4\u001b[0m     nn\u001b[38;5;241m.\u001b[39mConv2d(\u001b[38;5;241m16\u001b[39m, \u001b[38;5;241m10\u001b[39m, kernel_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m, stride\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m), nn\u001b[38;5;241m.\u001b[39mReLU(),\n\u001b[1;32m      5\u001b[0m     nn\u001b[38;5;241m.\u001b[39mAdaptiveAvgPool2d(\u001b[38;5;241m1\u001b[39m),\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mlambda\u001b[39;00m x: x\u001b[38;5;241m.\u001b[39mview(x\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m0\u001b[39m),\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      7\u001b[0m )\u001b[38;5;241m.\u001b[39mto(dev)\n\u001b[1;32m      8\u001b[0m loss_func \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39mcross_entropy\n\u001b[1;32m      9\u001b[0m opt \u001b[38;5;241m=\u001b[39m optim\u001b[38;5;241m.\u001b[39mSGD(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39mlr, momentum\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.9\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/torch/nn/modules/container.py:127\u001b[0m, in \u001b[0;36mSequential.__init__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m    125\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    126\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m idx, module \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(args):\n\u001b[0;32m--> 127\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39madd_module(\u001b[38;5;28mstr\u001b[39m(idx), module)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/torch/nn/modules/module.py:645\u001b[0m, in \u001b[0;36mModule.add_module\u001b[0;34m(self, name, module)\u001b[0m\n\u001b[1;32m    635\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Add a child module to the current module.\u001b[39;00m\n\u001b[1;32m    636\u001b[0m \n\u001b[1;32m    637\u001b[0m \u001b[38;5;124;03mThe module can be accessed as an attribute using the given name.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    642\u001b[0m \u001b[38;5;124;03m    module (Module): child module to be added to the module.\u001b[39;00m\n\u001b[1;32m    643\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    644\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(module, Module) \u001b[38;5;129;01mand\u001b[39;00m module \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 645\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtorch\u001b[38;5;241m.\u001b[39mtypename(module)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not a Module subclass\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    646\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(name, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m    647\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    648\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule name should be a string. Got \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtorch\u001b[38;5;241m.\u001b[39mtypename(name)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    649\u001b[0m     )\n",
+      "\u001b[0;31mTypeError\u001b[0m: __main__.<lambda> is not a Module subclass"
+     ]
+    }
+   ],
    "source": [
     "model = nn.Sequential(\n",
     "    nn.Conv2d(1,  16, kernel_size=3, stride=2, padding=1), nn.ReLU(),\n",
     "    nn.Conv2d(16, 16, kernel_size=3, stride=2, padding=1), nn.ReLU(),\n",
     "    nn.Conv2d(16, 10, kernel_size=3, stride=2, padding=1), nn.ReLU(),\n",
     "    nn.AdaptiveAvgPool2d(1),\n",
-    "    Lambda(lambda x: x.view(x.size(0),-1))\n",
+    "    lambda x: x.view(x.size(0),-1)\n",
     ").to(dev)\n",
-    "loss_func = F.cross_entropy()\n",
+    "loss_func = F.cross_entropy\n",
     "opt = optim.SGD(model.parameters(), lr=lr, momentum=0.9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.35200357556343076\n",
-      "1 0.23578783464431763\n",
-      "2 0.20812358429431915\n",
-      "3 0.18592815330028534\n",
-      "4 0.17274532527923583\n",
-      "5 0.16054231069684027\n",
-      "6 0.15549320149421691\n",
-      "7 0.1520364279359579\n",
-      "8 0.14865893067568542\n",
-      "9 0.14952965597659348\n",
-      "10 0.146713733959198\n",
-      "11 0.1522614889740944\n",
-      "12 0.14569349290132522\n",
-      "13 0.13937673519700766\n",
-      "14 0.1439363737821579\n",
-      "15 0.13884912676736713\n",
-      "16 0.13784348073005676\n",
-      "17 0.13778409123420715\n",
-      "18 0.13393967863321304\n",
-      "19 0.13233190182447432\n"
+      "0 0.37077810945510864\n",
+      "1 0.26521664757728575\n",
+      "2 0.23241297459602356\n",
+      "3 0.21140748776197432\n"
      ]
     }
    ],
    "source": [
-    "fit(epochs, model, F.cross_entropy, opt, train_dl, valid_dl)"
+    "fit(epochs, model, loss_func, opt, train_dl, valid_dl)"
    ]
   }
  ],
@@ -219,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
