casi casi listo

--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -194,6 +194,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7d527e3",
+   "metadata": {},
+   "source": [
+    "### Generadores\n",
+    "Un generador es un tipo de iterador que permite iterar sobre una secuencia pero devolviendo los valores de a uno a medida que se produzcan. Por ejemplo, puedo tener una lista de valores a = [1,2,3,4,5] o puedo tener una generador que vaya calculando 1 y lo devuelva con yield, 1+1 y lo devuelva con yield y así.\n",
+    "Cada vez que aparece yield, el generador se detiene  y devuelve el valor calculado. Cuando el generador vuelve a ser llamado sigue desde el lugar en que se quedó."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "00d62969",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "def even_numbers(limit):\n",
+    "    num = 0\n",
+    "    while num < limit:\n",
+    "        yield num\n",
+    "        num += 2\n",
+    "\n",
+    "for n in even_numbers(10):\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f25ebf99",
+   "metadata": {},
+   "source": [
+    "### Iteradores\n",
+    "completar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f5fe183d",
    "metadata": {},
    "source": [
@@ -506,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
