cambios en el dataloader

--- a/mnist/mnist_sample2.ipynb
+++ b/mnist/mnist_sample2.ipynb
@@ -20,18 +20,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle, gzip\n",
     "from pathlib import Path\n",
-    "from mnist_sample import *"
+    "from mnist_sample2 import *\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import random\n",
+    "\n",
+    "SEED = 42  # El número que quieras, pero siempre el mismo para reproducibilidad\n",
+    "\n",
+    "random.seed(SEED)\n",
+    "random.seed(SEED)\n",
+    "np.random.seed(SEED)\n",
+    "torch.manual_seed(SEED)\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.manual_seed(SEED)\n",
+    "    torch.cuda.manual_seed_all(SEED)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,17 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.3748003347873688\n",
-      "1 0.2564943835258484\n",
-      "2 0.2200279335975647\n",
-      "3 0.19629697043895722\n"
+      "0 0.43608020238876344\n",
+      "1 0.2648738523006439\n",
+      "2 0.23898386358022689\n",
+      "3 0.2452507713317871\n"
      ]
     }
    ],
