--- a/mnist/mnist_sample_mio.ipynb
+++ b/mnist/mnist_sample_mio.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,18 @@
     "from torch import nn,optim,tensor\n",
     "from torch.utils.data import TensorDataset, DataLoader\n",
     "import pickle, gzip\n",
+    "import numpy as np\n",
     "\n",
     "\n",
+    "SEED = 42\n",
+    "random.seed(SEED)\n",
+    "np.random.seed(SEED)\n",
+    "torch.manual_seed(SEED)\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.manual_seed(SEED)\n",
+    "    torch.cuda.manual_seed_all(SEED)\n",
+    "    torch.backends.cudnn.deterministic = True\n",
+    "    torch.backends.cudnn.benchmark = False\n",
     "\n",
     "def fit(epochs, model, loss_func, opt, train_dl, valid_dl):\n",
     "    for epoch in range(epochs):\n",
