--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -194,18 +194,94 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7d527e3",
+   "id": "1cdf0959",
    "metadata": {},
    "source": [
-    "### Generadores\n",
-    "Un generador es un tipo de iterador que permite iterar sobre una secuencia pero devolviendo los valores de a uno a medida que se produzcan. Por ejemplo, puedo tener una lista de valores a = [1,2,3,4,5] o puedo tener una generador que vaya calculando 1 y lo devuelva con yield, 1+1 y lo devuelva con yield y así.\n",
-    "Cada vez que aparece yield, el generador se detiene  y devuelve el valor calculado. Cuando el generador vuelve a ser llamado sigue desde el lugar en que se quedó."
+    "##### Sobre tteradores e iterables\n",
+    "  - Un iterable es cualquier objeto que se pueda recorrer o *iterar*, por ejemplo una lista, una tupla, un rango, un diccionario. \n",
+    "  - Un iterador es un objeto que implementa el protocolo de *iterador*, es decir, un objeto que tiene definidos los métodos:\n",
+    "    - `__iter__` que devuelve el propio objeto iterador\n",
+    "    - `__next__` que devuelve el siguiente elemento de la secuencia y un `StopIteration` cuando la secuencia llegó a su fin\n",
+    "  - La estructura de control `for`:\n",
+    "    - recibe un iterable, por ejemplo `range(10)`\n",
+    "    - le aplica `iter()` con lo cual lo convierte en iterador\n",
+    "    - llama repetidamente a `next()` hasta que aparezca la excepción `StopIteration` y termina\n",
+    "     "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d8ebf199",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = [1,2,3,4,5] # L es un iterable\n",
+    "iter_L = iter(L) # iter_L es un iterador\n",
+    "next(iter_L) # Devuelve el primer elemento del iterador"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7d527e3",
+   "metadata": {},
+   "source": [
+    "##### Sobre los generadores\n",
+    "Un generador es un objeto de tipo iterador creado por:\n",
+    "  - *Una función generadora*. Es decir, una función que devuelve sus resultados usando `yield` en lugar de `return`. Esto hace que la función recuerde el estado cuando se la deja y lo retome cuando se la llame de nuevo. \n",
+    "  - *Una expresión generadora*. Es igual que la comprehension list solo que se usan paréntesis en lugar de corchetes.\n",
+    "\n",
+    "También se podría crear un generador como instancia de una clase siempre que esta tenga implementado los métodos `__iter__` y `__next__` para convertirlo en iterador y los elementos del objeto sean creados con un método generador, es decir una función de que devuelva mediante `yield`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "00d62969",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "0 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Función generadora\n",
+    "def even_numbers(limit):\n",
+    "    num = 0\n",
+    "    while num < limit:\n",
+    "        yield num\n",
+    "        num += 2\n",
+    "gen_even = even_numbers(10) # gen_even es un generador\n",
+    "for n in even_numbers(10):\n",
+    "    print(n)\n",
+    "\n",
+    "print(next(gen_even),next(gen_even)) # Devuelve el siguiente elemento del generador\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e76d42a",
    "metadata": {},
    "outputs": [
     {
@@ -221,23 +297,103 @@
     }
    ],
    "source": [
-    "def even_numbers(limit):\n",
-    "    num = 0\n",
-    "    while num < limit:\n",
-    "        yield num\n",
-    "        num += 2\n",
-    "\n",
-    "for n in even_numbers(10):\n",
-    "    print(n)"
+    "# Expresión generadora\n",
+    "gen_even = (num for num in range(10) if num % 2 == 0) \n",
+    "for n in gen_even:\n",
+    "    print(n)\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f25ebf99",
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "96740af3",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "<class '__main__.NumerosCuadrados'>\n"
+     ]
+    }
+   ],
    "source": [
-    "### Iteradores\n",
-    "completar"
+    "# Clase que se comporta como un iterador\n",
+    "class NumerosCuadrados:\n",
+    "    def __init__(self, limite):\n",
+    "        self.limite = limite\n",
+    "        self.actual = 0 # Maneja el estado\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self # Un iterador es un iterable que se devuelve a sí mismo\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        if self.actual < self.limite:\n",
+    "            valor = self.actual * self.actual\n",
+    "            self.actual += 1 # Actualiza el estado para la próxima llamada\n",
+    "            return valor\n",
+    "        else:\n",
+    "            raise StopIteration\n",
+    "\n",
+    "# Uso de la clase iterador\n",
+    "cuadrados_obj = NumerosCuadrados(5)\n",
+    "\n",
+    "for num in cuadrados_obj:\n",
+    "    print(num)\n",
+    "\n",
+    "print(type(cuadrados_obj)) # Salida: <class '__main__.NumerosCuadrados'>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "011c1965",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'generator'>\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Clase que contiene un método generador\n",
+    "# Para iterar con una instancia de esta \n",
+    "# clase no es necesario implementar los métodos __iter__ y __next__\n",
+    "# porque el método generador ya lo hace implícitamente ya que todo generador es un iterador.\n",
+    "class SecuenciaPersonalizada:\n",
+    "    def __init__(self, inicio, fin):\n",
+    "        self.inicio = inicio\n",
+    "        self.fin = fin\n",
+    "\n",
+    "    def generar_rango(self): # Esto es un método generador\n",
+    "        actual = self.inicio\n",
+    "        while actual <= self.fin:\n",
+    "            yield actual\n",
+    "            actual += 1\n",
+    "\n",
+    "# Uso de la clase con un método generador\n",
+    "mi_secuencia = SecuenciaPersonalizada(1, 5)\n",
+    "\n",
+    "# Llamar al método generador para obtener un objeto generador\n",
+    "gen_obj = mi_secuencia.generar_rango()\n",
+    "\n",
+    "print(type(gen_obj)) # Salida: <class 'generator'>\n",
+    "\n",
+    "for num in gen_obj:\n",
+    "    print(num)"
    ]
   },
   {
