fin de mnist_sample_mio

--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -242,7 +242,9 @@
     "  - *Una función generadora*. Es decir, una función que devuelve sus resultados usando `yield` en lugar de `return`. Esto hace que la función recuerde el estado cuando se la deja y lo retome cuando se la llame de nuevo. \n",
     "  - *Una expresión generadora*. Es igual que la comprehension list solo que se usan paréntesis en lugar de corchetes.\n",
     "\n",
-    "También se podría crear un generador como instancia de una clase siempre que esta tenga implementado los métodos `__iter__` y `__next__` para convertirlo en iterador y los elementos del objeto sean creados con un método generador, es decir una función de que devuelva mediante `yield`."
+    "Ojo, no todo objeto de tipo iterador es un objeto generador, solo los que son creados por una función generadora.\n",
+    "\n",
+    "También se podría crear un generador como instancia de una clase siempre que dicha tenga implementado los métodos `__iter__` y `__next__` para convertirla en iterador y los elementos del objeto sean creados con un método generador, es decir una función de que devuelva mediante `yield`.\n"
    ]
   },
   {
@@ -394,6 +396,54 @@
     "\n",
     "for num in gen_obj:\n",
     "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75d9b384",
+   "metadata": {},
+   "source": [
+    "##### Diferencia entre generadores y clases/instancias\n",
+    "  - Clases/Instancias: Mantienen el estado de los datos (variables de instancia) a través de múltiples llamadas a sus métodos. Los métodos, a menos que usen yield, se ejecutan de forma completa cada vez.\n",
+    "  - Generadores: Mantienen el estado de la ejecución (variables locales, punto de pausa) y permiten \"pausar\" y \"reanudar\" la ejecución de la función.\n",
+    "\n",
+    "Puedes tener métodos de clase que sean generadores (si contienen yield), pero esto es una elección de diseño específica y no una propiedad inherente de todos los métodos de clase.\n",
+    "\n",
+    "Recordar que `__iter__` siempre debe devolver un objeto de tipo iterador. En el siguiente ejemplo esto lo hacemos devolviendo con `yield` ya que de este modo se convierte a `__iter__` en una función generadora y por lo tanto devolverá un iterador (de tipo generador)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8f83fdb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "-2\n",
+      "-3\n",
+      "-4\n",
+      "-5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4,5]\n",
+    "class Prueba():\n",
+    "    def __init__(self, x):\n",
+    "        self.x = a\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "    #    return self.x\n",
+    "        for i in self.x:\n",
+    "            yield  -i\n",
+    "p = Prueba(a)\n",
+    "\n",
+    "for i in p:\n",
+    "    print(i)  # Salida: 1, 2, 3, 4, 5"
    ]
   },
   {
@@ -696,7 +746,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -710,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
