--- a/mnist/mnist_sample1.ipynb
+++ b/mnist/mnist_sample1.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.43608038740158084\n",
-      "1 0.2648737972021103\n",
-      "2 0.23898396736979485\n",
-      "3 0.24525080618560313\n"
+      "0 0.42709230546951293\n",
+      "1 0.26406262055635454\n",
+      "2 0.22213245001137258\n",
+      "3 0.19952659235298634\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -87,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
