--- a/mnist/mnist_sample_mio.ipynb
+++ b/mnist/mnist_sample_mio.ipynb
@@ -8,28 +8,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*by Jeremy Howard, fast.ai.*\n",
-    "\n",
-    "In this notebook we'll see how easy it is to use the simple functions we created along with `torch.nn` and friends to train MNIST. We're going to create the same convolution net that we created at the end of the previous notebook, but this time we'll use the functions we've already written, and we'll skip the explanatory text so you can see just the final code.\n",
-    "\n",
-    "You can use this same notebook to train other neural nets on other datasets with minimal changes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Modulo `mnist_sample.py`"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0.4270922985076904\n",
+      "1 0.2640626178264618\n",
+      "2 0.22213245170116425\n",
+      "3 0.19952659080028534\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -38,6 +31,7 @@
     "from torch.utils.data import TensorDataset, DataLoader\n",
     "import pickle, gzip\n",
     "import numpy as np\n",
+    "import random\n",
     "\n",
     "\n",
     "SEED = 42\n",
@@ -49,6 +43,8 @@
     "    torch.cuda.manual_seed_all(SEED)\n",
     "    torch.backends.cudnn.deterministic = True\n",
     "    torch.backends.cudnn.benchmark = False\n",
+    "\n",
+    "dev = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
     "\n",
     "def fit(epochs, model, loss_func, opt, train_dl, valid_dl):\n",
     "    for epoch in range(epochs):\n",
@@ -75,145 +71,58 @@
     "        print(epoch, val_loss)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "class WrappedDataLoader():\n",
-    "    def __init__(self, dl, func):\n",
+    "class Convert_x():\n",
+    "    def __init__(self, dl):\n",
     "        self.dl = dl\n",
-    "        self.func = func\n",
-    "\n",
     "    def __len__(self): return len(self.dl)\n",
-    "\n",
     "    def __iter__(self):\n",
-    "        batches = iter(self.dl)\n",
-    "        for b in batches: yield(self.func(*b))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Prueba del módulo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        # batches = iter(self.dl)\n",
+    "        for b in self.dl:\n",
+    "            xp = b[0].view(-1,1,28,28).to(dev)\n",
+    "            yp = b[1].to(dev)\n",
+    "            yield xp, yp\n",
+    "            \n",
     "\n",
-    "\n",
-    "with gzip.open('data/mnist.pkl.gz', 'rb') as f:\n",
-    "    ((train_x, train_y), (valid_x, valid_y), _) = pickle.load(f, encoding='latin-1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bs=64\n",
-    "lr=0.1\n",
-    "epochs=4\n",
-    "\n",
-    "dev = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def preprocess(x,y): return x.view(-1,1,28,28).to(dev),y.to(dev)\n",
     "\n",
     "def get_dataloader(x,y,bs,shuffle):\n",
     "    ds = TensorDataset(*map(tensor, (x,y)))\n",
     "    dl = DataLoader(ds, batch_size=bs, shuffle=shuffle)\n",
-    "    for xb, yb in dl:\n",
-    "        xp = xb.view(-1,1,28,28).to(dev)\n",
-    "        yp = yb.to(dev)\n",
-    "    return xp,yp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dl = get_dataloader(train_x, train_y, bs,   shuffle=False)\n",
-    "valid_dl = get_dataloader(valid_x, valid_y, bs*2, shuffle=True )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define a generic custom layer\n",
-    "class Custom_layer(nn.Module):\n",
-    "    def __init__(self, func):\n",
-    "        super().__init__()\n",
-    "        self.func = func\n",
+    "    dlp = Convert_x(dl)\n",
+    "    return dlp\n",
+    "\n",
+    "class Aplanar(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__() # Llamada al constructor de la clase padre\n",
     "    def forward(self, x):\n",
-    "        return self.func(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return x.view(x.size(0),-1)\n",
+    "\n",
+    "\n",
+    "bs=64\n",
+    "lr=0.1\n",
+    "epochs=4\n",
+    "\n",
+    "with gzip.open('data/mnist.pkl.gz', 'rb') as f:\n",
+    "    ((train_x, train_y), (valid_x, valid_y), _) = pickle.load(f, encoding='latin-1')\n",
+    "\n",
     "model = nn.Sequential(\n",
     "    nn.Conv2d(1,  16, kernel_size=3, stride=2, padding=1), nn.ReLU(),\n",
     "    nn.Conv2d(16, 16, kernel_size=3, stride=2, padding=1), nn.ReLU(),\n",
     "    nn.Conv2d(16, 10, kernel_size=3, stride=2, padding=1), nn.ReLU(),\n",
     "    nn.AdaptiveAvgPool2d(1),\n",
-    "    Custom_layer(lambda x: x.view(x.size(0),-1))\n",
+    "    Aplanar()\n",
     ").to(dev)\n",
     "loss_func = F.cross_entropy\n",
-    "opt = optim.SGD(model.parameters(), lr=lr, momentum=0.9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m fit(epochs, model, loss_func, opt, train_dl, valid_dl)\n",
-      "Cell \u001b[0;32mIn[27], line 14\u001b[0m, in \u001b[0;36mfit\u001b[0;34m(epochs, model, loss_func, opt, train_dl, valid_dl)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(epochs):\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;66;03m# Entrenamiento\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     model\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[0;32m---> 14\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m xb,yb \u001b[38;5;129;01min\u001b[39;00m train_dl: \n\u001b[1;32m     15\u001b[0m         pb \u001b[38;5;241m=\u001b[39m model(xb)\n\u001b[1;32m     16\u001b[0m         loss \u001b[38;5;241m=\u001b[39m loss_func(pb,yb)  \n",
-      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-     ]
-    }
-   ],
-   "source": [
+    "opt = optim.SGD(model.parameters(), lr=lr, momentum=0.9)\n",
+    "\n",
+    "train_dl = get_dataloader(train_x, train_y, bs,   shuffle=False)\n",
+    "valid_dl = get_dataloader(valid_x, valid_y, bs*2, shuffle=True )\n",
     "fit(epochs, model, loss_func, opt, train_dl, valid_dl)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
